PR-60 || improve & fix issues in follow endpoint
