# user-info-service/src/main/java/com/javaworld/instagram/userinfoservice/persistence/FollowerEntity.java
@@ -1,5 +1,7 @@
 package com.javaworld.instagram.userinfoservice.persistence;
 
+import java.io.Serializable;
+
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
@@ -19,18 +21,21 @@ import lombok.ToString;
 @ToString
 //TODO: crate an abstract entity that holds the version property and each entity shall extend that 
 //abstract entity
-public class FollowerEntity {
+public class FollowerEntity implements Serializable {
 
+    private static final long serialVersionUID = 1L;
+
+    
 	@Id
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	private int id;
 
     @ManyToOne
-    @JoinColumn(name = "follower_id")
+    @JoinColumn(name = "follower_id", referencedColumnName = "userUuid")
     private UserEntity follower;
 
     @ManyToOne
-    @JoinColumn(name = "followed_id")
+    @JoinColumn(name = "followed_id", referencedColumnName = "userUuid")
     private UserEntity followed;
 	
 	@Version
